Mon Mar  9 11:32:19 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* man/check-man: Check that a manual page formats without errors;
	  inspired by Lintian.
	* man/Rules.man: Run check-man over all manual pages during 'make
	  check'.

Mon Mar  9 10:47:08 GMT 2009  Arif E. Nugroho  <arif_endro@yahoo.com>

	* man/po4a/po/id.po: Update from Translation Project.

Tue Feb 24 01:06:46 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.4.
	* po/man-db.pot, po/*.po: Update.

Tue Feb 24 01:00:56 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/id.po: Fix groff syntax error.

Mon Feb 23 22:37:36 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Sending patches): Refer to new man-db-devel mailing
	  list.

Mon Feb 23 22:29:43 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Things to do): Improve bug tracking system link.

Mon Feb 23 22:17:50 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (locale_macros, display): Only load per-locale groff
	  macros if preconv is available, since those macros may change the
	  assumed input encoding.

Mon Feb 23 22:11:56 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Update.

Sat Feb 21 12:01:55 GMT 2009  Colin Watson  <cjwatson@debian.org>

	Load per-locale groff macros if possible. This only works with groff
	1.20.2 (as yet unreleased) or better, since that introduces
	facilities to allow us to avoid an error message if there is no
	macro file for the relevant locale.

	* src/man.c (locale_macros): New function.
	  (display): Check the page language, and add locale_macros to the
	  formatting pipeline provided that the language is not empty or
	  "C".

Fri Feb 20 09:58:13 GMT 2009  Colin Watson  <cjwatson@debian.org>

	Partially rewrite building of manpath according to locale. The
	previous code was completely wrong: as well as handling duplicates
	rather oddly, it effectively handled LANGUAGE in reverse order
	(Debian bug #516133).
