@@ -1,3 +1,9 @@
+Tue Mar 10 14:11:14 GMT 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/zsoelim.l (zsoelim_parse_file): Put the initial .lf request
+	  after any initial comment line, so that manconv can find encoding
+	  instructions more easily.
+
 Mon Mar  9 11:32:19 GMT 2009  Colin Watson  <cjwatson@debian.org>
 
 	* man/check-man: Check that a manual page formats without errors;
